fix overflow

--- a/client/styles/abstracts/_variables.scss
+++ b/client/styles/abstracts/_variables.scss
@@ -1,4 +1,4 @@
-$base-font-size: 12;
+$base-font-size: 10;
 
 //colors
 $p5js-pink: #ed225d;
