--- a/client/styles/components/_about.scss
+++ b/client/styles/components/_about.scss
@@ -12,15 +12,18 @@
   justify-content: space-between;
   flex-wrap: wrap;
   padding-top: #{17 / $base-font-size}rem;
-  padding-right: #{78 / $base-font-size}rem;
+  padding-right: #{38 / $base-font-size}rem;
   padding-bottom: #{20 / $base-font-size}rem;
   padding-left: #{20 / $base-font-size}rem;
-  width: #{720 / $base-font-size}rem;
+  max-width: #{600 / $base-font-size}rem;
+  position: relative;
+  overflow: auto;
 }
 
 .about__content-column {
   display: flex;
   flex-direction: column;
+  margin-top: 2rem;
 }
 
 .about__content-column-title {
@@ -69,7 +72,7 @@
   padding-top: #{18 / $base-font-size}rem;
   padding-right: #{20 / $base-font-size}rem;
   padding-bottom: #{21 / $base-font-size}rem;
-  padding-left: #{291 / $base-font-size}rem;
+  padding-left: #{31 / $base-font-size}rem;
   width: 100%;
 }
 
